# instant-messenger-fmi-webtech26

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
app/client/html/: chat.html  login.html  register.html
app/client/scripts/: chat.js  login.js  register.js  script.js
app/client/styles/: style.css
app/scripts/: script.js
app/server/: main.py  seed.py
app/server/core/: auth.py  config.py  websocket.py
app/server/db/: database.py
app/server/models/: channel.py  message.py  user.py
app/server/schemas/: __init__.py  channel.py  token.py  user.py
app/styles/: style.css
backend/: main.py  seed.py
backend/api/v1/: router.py
backend/core/: auth.py  config.py  passwords.py  websocket.py
backend/db/: database.py
backend/models/: __init__.py  channel.py  message.py  user.py
backend/schemas/: __init__.py  channel.py  message.py  user.py
backend/static/: index.html
backend/static/assets/: index-BPvJBW8A.css  index-BmYUfvPo.js
docker_compose/: app.yaml  storages.dev.yaml  storages.yaml
docker_compose/postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
docker_compose/postgres_data/pg_stat/: pgstat.stat
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChannelList.jsx  CreateChannelModal.jsx  MessageInput.jsx  MessageList.jsx  PasswordRequirements.jsx
frontend/src/pages/: Chat.jsx  (+2 more)
tests/: test_config.py  test_endpoint_security.py  test_message_schema.py  test_seed.py  test_websocket_manager.py
(+67 files in other folders)
